<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/proposeWalkTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65sp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/lato_bold"
        android:text="@string/title_propose_walk_screeen"
        android:textColor="@color/colorText"
        android:textSize="35sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/routeNameEntry"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/route_name"
            android:textColor="@color/colorText"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/routeName"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:hint="@string/route_name"
            android:inputType="text"
            android:background="@color/white"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            android:autofillHints="" tools:targetApi="o" />

    </LinearLayout>

    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/startPositionEntry"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/start_position"
            android:textColor="@color/colorText"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/startPosition"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:hint="@string/start_position"
            android:inputType="text"
            android:background="@color/white"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            android:importantForAutofill="no" />

    </LinearLayout>
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/timeEntry"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/showTimeLabel"
            android:layout_marginEnd="120sp"
            android:textColor="@color/colorText"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/hour"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fontFamily="@font/lato_bold"
            android:hint="@string/double_zero"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="@color/colorAccent"
            android:textSize="25sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:layout_marginStart="0sp"
            android:text="@string/colonStr"
            android:textColor="@color/colorText"
            android:gravity="center"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/minute"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fontFamily="@font/lato_bold"
            android:hint="@string/double_zero"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="@color/colorAccent"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/dateEntry"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/showDateLabel"
            android:layout_marginEnd="120sp"
            android:textColor="@color/colorText"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/month"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fontFamily="@font/lato_bold"
            android:hint="@string/monthEntry"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="@color/colorAccent"
            android:textSize="25sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:layout_marginStart="0sp"
            android:text="@string/slashStr"
            android:textColor="@color/colorText"
            android:gravity="center"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/day"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fontFamily="@font/lato_bold"
            android:hint="@string/dayEntry"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="@color/colorAccent"
            android:textSize="25sp" />

    </LinearLayout>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/btn_rounded"
        android:drawableStart="@drawable/ic_check_white_24dp"
        android:drawablePadding="5dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_marginTop="80sp"
        android:text="@string/submit_text"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />


</LinearLayout>