<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/homeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/lato"
        android:text="@string/home"
        android:textColor="@color/colorText"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/todayStatsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="55sp"
        android:layout_marginTop="25sp"
        android:fontFamily="@font/lato_bold"
        android:textColor="@color/colorText"
        android:text="@string/today_s_stats" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/homeDailyStepsTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:layout_weight="1"
            android:text="@string/steps_title"
            android:textColor="@color/colorText"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/homeDailyStepsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="@string/default_zero"
            android:textColor="@color/colorAccent"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/homeDailyDistanceTitle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/distance"
            android:textColor="@color/colorText"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/homeDailyDistanceCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="@string/large_distance"
            android:textColor="@color/colorAccent"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/homeDailyEstimateTitle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/estimates"
            android:textColor="@color/colorText"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/homeDailyEstimateCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="@string/large_distance"
            android:textColor="@color/colorAccent"
            android:textSize="25sp" />
    </LinearLayout>


    <Button
        android:id="@+id/startBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/btn_rounded"
        android:drawableStart="@drawable/ic_home_white_24dp"
        android:drawablePadding="5dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_marginTop="35sp"
        android:text="START WALK"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/btn_rounded"
        android:drawableStart="@drawable/ic_add_white_24dp"
        android:drawablePadding="5dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_marginTop="25sp"
        android:text="ADD ROUTE"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Main content -->

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimary"
            app:itemIconTint="@color/white"
            app:itemTextColor="@color/white"
            app:menu="@menu/bottom_navigation_menu" />

    </FrameLayout>


</LinearLayout>